--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
+  
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'">
     <title>Malicious Page</title>
   </head>
   <body>
     <script type="text/javascript">
-      // This calls the exposed interface method in the challenge app.
       var flagInfo = Android.getdate("flag");
       document.write(flagInfo);
     </script>
