--- a/index.html
+++ b/index.html
@@ -2,14 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-  
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline'">
     <title>Malicious Page</title>
   </head>
   <body>
-    <script type="text/javascript">
-      var flagInfo = Android.getdate("flag");
-      document.write(flagInfo);
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
